# PV-Finder

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  JOURNAL.md  README.md  pyproject.toml  requirements.txt
configs/: qibin_test_main_indices_v2.p  test_indices_300evt.p  test_main_indices_2550evt.p  test_main_indices_300evt.p
configs/gnn/: config_gnn_ttva.yml  config_gnn_ttva_hllhc.yml  config_gnn_ttva_hllhc_v2.yml  config_gnn_ttva_hllhc_v3.yml  config_gnn_ttva_mu60_v2.yml  config_gnn_ttva_repro.yml
configs/vertex_association/: config_gnn_ttva.yml
configs/vertex_finding/: config_KDE2HIST_400ep_03_24_2026.yml  config_KDE2HIST_matmauro.yml  config_KDE2HIST_v2.yml  config_T2HIST_400ep_03_24_2026.yml  config_T2HIST_combined_200epochs.yml  config_T2HIST_matmauro.yml  config_T2HIST_v2.yml  config_T2KDE_400ep_03_24_2026.yml  config_T2KDE_A_z_reproduction.yml  config_hllhc_pu200_e2e.yml  config_hllhc_pu200_e2e_v2.yml  config_hllhc_pu200_e2e_v3.yml  config_hllhc_pu200_e2e_v4.yml  config_hllhc_pu200_e2e_v4b_stepwarmup.yml  config_hllhc_pu200_e2e_v5_corrected.yml  config_mlp_hist_e2e.yml
docs/: index.md
docs/data/: monte_carlo.md  run_2.md  run_3.md  run_4.md
docs/diagnostics/: vertex_association.md  vertex_finding.md
docs/evaluation/: vertex_association.md  vertex_finding.md
docs/models/: vertex_association.md  vertex_finding.md
docs/research/: peak_classification_study.md  resolution_bump_analysis.md
docs/training/: vertex_association.md  vertex_finding.md
scripts/: build_mu60_v2_shards.sh  build_v3_shards.sh  rebuild_v3_shards_0_7.sh  train_v5_corrected.sh
(+118 files in other folders)
